# takTools

./: .gitignore  .gitmodules  CODING_STYLE.md  README.md  install.py
bifrost/Tak/src/: CMakeLists.txt  PackConfig.json.in  Tak.cpp  Tak.h
bifrost/Tak/src/Containers/: Containers.cpp  Containers.h
bifrost/Tak/src/Image/: Image.cpp  Image.h
bifrost/Tak/src/Math/: Math.cpp  Math.h
bifrost/Tak/src/Mesh/: Mesh.cpp  Mesh.h
bifrost/Tak/src/OpenCL/: OpenCL.cpp  OpenCL.h
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/: .clang-format  CMakeLists.txt  README.md
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/AminoConcepts/: CMakeLists.txt  README.md
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/AminoConcepts/src/: AminoConceptsExport.h  CMakeLists.txt  PackConfig.json.in  PassingConventions.cpp  PassingConventions.h  Types.cpp  Types.h
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/Complex/: CMakeLists.txt  README.md
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/Complex/src/: CMakeLists.txt  Complex.cpp  Complex.h  ComplexAlgorithms.cpp  ComplexAlgorithms.h  ComplexAlgorithmsExport.h  ComplexExport.h
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/ExecutorBasics/: AddNumbers.json  CMakeLists.txt  README.md
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/ExecutorBasics/src/: CMakeLists.txt  ExecutorBasicsConfig.json.in  ExecutorBasicsExport.h  ExecutorBasicsTranslation.cpp  ExecutorBasicsTranslation.h  ExecutorBasicsValueData.h  main.cpp
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/ExecutorCustomObject/: CMakeLists.txt  README.md
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/ExecutorCustomObject/src/: CMakeLists.txt  ExecutorCustomObject.h  ExecutorCustomObjectExport.h  ExecutorCustomObjectPackConfig.json.in  ExecutorCustomObjectTranslation.cpp  ExecutorCustomObjectTranslation.h  ExecutorCustomObjectValueData.h  TranslateBoundingBox.json  main.cpp
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/ExecutorWatchpoint/: CMakeLists.txt  README.md
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/ExecutorWatchpoint/src/: CMakeLists.txt  ExecutorWatchpointExport.h  ExecutorWatchpointPackConfig.json.in  PeriodicTableElement.cpp  PeriodicTableElement.h  PeriodicTableElementWatchpoint.cpp  main.cpp
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/HSV/: CMakeLists.txt  README.md
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/HSV/src/: CMakeLists.txt  HsvColor.cpp  HsvColor.h  HsvColorExport.h
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/IndexSet/: CMakeLists.txt  README.md
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/IndexSet/src/: CMakeLists.txt  IndexSet.cpp  IndexSet.h  IndexSetExport.h
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/MeshArea/: CMakeLists.txt  README.md
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/MeshArea/cpp_operator/: CMakeLists.txt  MeshAreaOps.cpp  MeshAreaOps.h  MeshAreaOpsExport.h
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/MeshArea/src/: CMakeLists.txt  MeshArea.cpp
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/MeshArea/src/include/Examples/GeoSDK/: Float3Utils.h  (+2 more)
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/MeshArea/test/: CMakeLists.txt  TestMeshArea.cpp
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/MeshWeldUV/: CMakeLists.txt  README.md
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/MeshWeldUV/cpp_operator/: CMakeLists.txt  MeshWeldUVOps.cpp  MeshWeldUVOps.h  MeshWeldUVOpsExport.h
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/MeshWeldUV/src/: CMakeLists.txt  MeshWeldUV.cpp
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/MeshWeldUV/test/: CMakeLists.txt  TestMeshWeldUV.cpp
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/ObjWriter/: CMakeLists.txt  README.md
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/ObjWriter/cpp_operator/: CMakeLists.txt  ObjWriterOps.cpp  ObjWriterOps.h  ObjWriterOpsExport.h
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/ObjWriter/src/: CMakeLists.txt  ObjWriter.cpp
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/ObjWriter/test/: CMakeLists.txt  TestObjWriter.cpp
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/SimpleAssociative/: CMakeLists.txt  README.md
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/SimpleAssociative/graphs/: CMakeLists.txt
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/SimpleAssociative/graphs/associative_left_to_right/: associative_left_to_right.json
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/SimpleAssociative/graphs/associative_right_to_left/: associative_right_to_left.json
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/SimpleAssociative/graphs/binary_left_to_right/: binary_left_to_right.json
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/SimpleAssociative/src/: CMakeLists.txt  SimpleAssociative.cpp  SimpleAssociative.h  SimpleAssociativeExport.h
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/SimpleNUBSCurve/: CMakeLists.txt  README.md
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/SimpleNUBSCurve/cpp_operator/: CMakeLists.txt  NUBSCurveOps.cpp  NUBSCurveOps.h  NUBSCurveOpsExport.h
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/SimpleNUBSCurve/src/: CMakeLists.txt  SimpleNUBSCurve.cpp  SimpleNUBSCurveKey.cpp  SimpleNUBSCurveView.cpp
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/SimpleNUBSCurve/test/: CMakeLists.txt  SimpleNUBSCurveTest.cpp
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/SimpleString/: CMakeLists.txt  README.md
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/SimpleString/src/: CMakeLists.txt  PackConfig.json.in  SimpleString.cpp  SimpleString.h  SimpleStringExport.h
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/TwistDeformer/: CMakeLists.txt  README.md
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/TwistDeformer/compound/: CMakeLists.txt  twist_geometry.json
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/TwistDeformer/cpp_operator/: CMakeLists.txt  TwistDeformerOps.cpp  TwistDeformerOps.h  TwistDeformerOpsExport.h
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/TwistDeformer/src/: CMakeLists.txt  TwistDeformer.cpp
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/TwistDeformer/test/: CMakeLists.txt  TestTwistDeformer.cpp
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/VectorLength/: CMakeLists.txt  README.md
bifrost/bifrost_sdk/2.14.1.0/sdk/examples/VectorLength/src/: CMakeLists.txt  VectorLength.cpp  VectorLength.h  VectorLengthExport.h
(+596 files in other folders)
